# HealthConnect

./: .gitignore  Cargo.toml  README.md
services/authentication/src/: main.rs
services/authentication/src/handlers/: auth.rs
services/authentication/src/models/: user.rs
services/authentication/src/routes/: mod.rs
services/facial_verification/: facenet.onnx
services/facial_verification/src/: main.rs
src/: lib.rs
src/services/: mod.rs
src/services/authentication/src/: main.rs
src/services/authentication/src/handlers/: auth.rs
src/services/authentication/src/routes/: mod.rs
tests/: auth_integration_test.rs
