[package]
name = "HealthConnect"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
dotenv = "0.15.0"
env_logger = "0.11.6"
jsonwebtoken = "9.3.1"
log = "0.4.25"
onnxruntime = "0.0.14"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls"] }
tract-onnx = "0.21.9"
